crates/uselesskey-x509/tests/snapshots/snapshots_x509__self_signed_leaf.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 175
expression: result
---
label: snapshot-leaf
subject_cn: snapshot.example.com
issuer_cn: snapshot.example.com
is_ca: false
validity_days: 3650
serial_number_len: "[REDACTED]"
cert_pem_has_header: true
cert_pem_has_footer: true
private_key_pem_has_header: true
private_key_pem_has_footer: true
cert_der_len: "[REDACTED]"
key_usage_digital_signature: true
key_usage_key_encipherment: true
key_usage_key_cert_sign: false
key_usage_crl_sign: false
has_eku: true
eku_server_auth: true
eku_client_auth: true
