crates/uselesskey-x509/tests/snapshots/snapshots_x509__self_signed_leaf_key_pem_structure.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 146
expression: pem_structure(cert.private_key_pkcs8_pem())
---
header: "-----BEGIN PRIVATE KEY-----"
footer: "-----END PRIVATE KEY-----"
body_lines: "[26 base64 lines]"
