crates/uselesskey-x509/tests/snapshots/snapshots_x509__wrong_key_usage_cert_metadata.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
assertion_line: 224
expression: cert_metadata(wrong.cert_der())
---
version: V3
subject: CN=badku.snapshot.example.com
issuer: CN=badku.snapshot.example.com
serial: "1a:ad:26:35:94:f4:20:67:27:38:26:dc:33:ea:f8:b2"
signature_algorithm: 1.2.840.113549.1.1.11
not_before: "Sat, 16 Aug 2025 00:00:00 +0000"
not_after: "Tue, 14 Aug 2035 00:00:00 +0000"
is_ca: true
extensions:
  - oid: 2.5.29.15
    critical: true
    parsed: "KeyUsage(digital_signature=true, key_encipherment=true, key_cert_sign=false, crl_sign=false)"
  - oid: 2.5.29.14
    critical: false
    parsed: other
  - oid: 2.5.29.19
    critical: true
    parsed: "BasicConstraints(ca=true, pathlen=None)"
