crates/uselesskey-x509/tests/snapshots/snapshots_x509__x509_cert_metadata.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
expression: meta
---
subject_cn: snap.example.com
issuer_cn: snap.example.com
is_self_signed: true
version: 2
serial_number: "[REDACTED]"
