crates/uselesskey-x509/tests/snapshots/snapshots_x509__x509_cert_pem_shape.snap
---
source: crates/uselesskey-x509/tests/snapshots_x509.rs
expression: shape
---
first_line: "-----BEGIN CERTIFICATE-----"
last_line: "-----END CERTIFICATE-----"
line_count: "[VOLATILE]"
total_len: "[VOLATILE]"
